# LDNS-Selector-Windows

./: LICENSE  README.md
code/: readme.md
code/data/: update_for_test.bat
code/data/res/: adapter_info_item.xml  dns_info_item.xml  main_frame.xml
code/msvc/: dns_selector.sln  dns_selector.vcxproj  dns_selector.vcxproj.filters  prepare.bat
code/src/: WinMain.cpp  ad_performancer.cpp  ad_performancer.h  define.h  dns_ping.cpp  dns_ping.h  dns_selector.aps  dns_selector.cpp  dns_selector.h  dns_selector.rc  dns_switcher.cpp  dns_switcher.h  interface.h  ip_fetcher.cpp  ip_fetcher.h  performance_counter.cpp  performance_counter.h  resource.h  ui.cpp  ui.h  util.h  version.h  wmi.cpp  wmi.h
code/third/DNSPing/: LICENSE  README.md
code/third/DNSPing/Documents/: ReadMe(zh_Hans).txt  ReadMe(zh_Hant).txt  ReadMe.txt
code/third/DNSPing/Release/Mac/: DNSPing
code/third/DNSPing/Source/: Base.h  CMakeLists.txt  Console.cpp  DNSPing.rc  DNSPing.vcxproj  DNSPing.vcxproj.filters  Interface.cpp  Interface.h  Main.cpp  Main.h  Process.cpp  Process.h  Protocol.cpp  Resolver.cpp  Resolver.h  Terminal.cpp  resource.h
code/third/cpprestsdk/: .gitignore  CONTRIBUTORS.txt  README.md  ThirdPartyNotices.txt  cpprestsdk120.sln  license.txt  setup_ps_env_VS2013.ps1  setup_ps_env_VS2015.ps1
code/third/cpprestsdk/Release/: CMakeLists.txt  dirs.proj  public_apis_doxyfile
code/third/cpprestsdk/Release/samples/: CMakeLists.txt  dirs.proj
code/third/cpprestsdk/Release/src/: CMakeLists.txt  dirs.proj
code/third/cpprestsdk/Release/tests/: CMakeLists.txt  dirs.proj
code/third/duilib/src/: DuiLib_Static.vcxproj
code/third/duilib/src/Control/: UIList.cpp  UIScrollBar.cpp  UIWebBrowser.cpp
code/tools/HaoZip/: 2345好压免责声明.txt  HaoZip.chm
code/tools/HaoZip/sfx/: HaoZip7zCon.sfx  HaoZip7zSetup.sfx
code/tools/HaoZip/skins/: HaoZip.dui  HaoZip.skn  HaoZip.xml
(+677 files in other folders)
